@@ -1312,6 +1312,7 @@ class Linker {
 
 	/**
 	 * Converts autogenerated comments in edit summaries into section links.
+	 *
 	 * The pattern for autogen comments is / * foo * /, which makes for
 	 * some nasty regex.
 	 * We look for all comments, match any text before and after the comment,
@@ -1324,14 +1325,28 @@ class Linker {
 	 * @return string Formatted comment
 	 */
 	private static function formatAutocomments( $comment, $title = null, $local = false ) {
-		return preg_replace_callback(
-			'!(.*)/\*\s*(.*?)\s*\*/(.*)!',
-			function ( $match ) use ( $title, $local ) {
+		// @todo $append here is something of a hack to preserve the status
+		// quo. Someone who knows more about bidi and such should decide
+		// (1) what sane rendering even *is* for an LTR edit summary on an RTL
+		// wiki, both when autocomments exist and when they don't, and
+		// (2) what markup will make that actually happen.
+		$append = '';
+		$comment = preg_replace_callback(
+			// To detect the presence of content before or after the
+			// auto-comment, we use capturing groups inside optional zero-width
+			// assertions. But older versions of PCRE can't directly make
+			// zero-width assertions optional, so wrap them in a non-capturing
+			// group.
+			'!(?:(?<=(.)))?/\*\s*(.*?)\s*\*/(?:(?=(.)))?!',
+			function ( $match ) use ( $title, $local, &$append ) {
 				global $wgLang;
 
-				$pre = $match[1];
+				// Ensure all match positions are defined
+				$match += array( '', '', '', '' );
+
+				$pre = $match[1] !== '';
 				$auto = $match[2];
-				$post = $match[3];
+				$post = $match[3] !== '';
 				$comment = null;
 				Hooks::run( 'FormatAutocomments', array( &$comment, $pre, $auto, $post, $title, $local ) );
 				if ( $comment === null ) {
@@ -1361,7 +1376,7 @@ class Linker {
 					}
 					if ( $pre ) {
 						# written summary $presep autocomment (summary /* section */)
-						$pre .= wfMessage( 'autocomment-prefix' )->inContentLanguage()->escaped();
+						$pre = wfMessage( 'autocomment-prefix' )->inContentLanguage()->escaped();
 					}
 					if ( $post ) {
 						# autocomment $postsep written summary (/* section */ summary)
@@ -1369,12 +1384,14 @@ class Linker {
 					}
 					$auto = '<span class="autocomment">' . $auto . '</span>';
 					$comment = $pre . $link . $wgLang->getDirMark()
-						. '<span dir="auto">' . $auto . $post . '</span>';
+						. '<span dir="auto">' . $auto;
+					$append .= '</span>';
 				}
 				return $comment;
 			},
 			$comment
 		);
+		return $comment . $append;
 	}
 
 	/**
